# AdvancedGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sand.bat  sand.sh
Demos/CharacterAnimation/: AnimationRenderable.cpp  AnimationRenderable.h  CharacterAnimation.cpp  CharacterAnimation.h
Demos/ModelDisplay/: ModelDisplay.cpp  ModelDisplay.h  ModelDisplayRenderables.cpp  ModelDisplayRenderables.h  ModelDisplayUIView.cpp  ModelDisplayUIView.h  ShadowRender.cpp  ShadowRender.h
Demos/TessellationShader/: BesizerRenderable.cpp  BesizerRenderable.h  TessellationShader.cpp  TessellationShader.h
Demos/TessellationShader/shader/: Bezier.fs  Bezier.tcs  Bezier.tes  Bezier.vs
Demos/Triangulation/: TrianglulationDemo.cpp  TrianglulationDemo.h  TriangulationDemoUI.cpp  TriangulationDemoUI.h  TriangulationRenderables.cpp  TriangulationRenderables.h  triangle.cpp  triangle.h
Demos/Untangle/: GeometryMath.cpp  GeometryMath.h  TriMeshRenderable.cpp  TriMeshRenderable.h  UntangleDemo.cpp  UntangleDemo.h  UntangleDemoView.cpp  UntangleDemoView.h  UntangleSolver.cpp  UntangleSolver.h
Framework/include/: aabb.h  aabb_render.h  animator.h  app.h  app_setting.h  camera_control.h  demo_runner.h  global.h  globject.h  idemo.h  input_listener.h  irenderable.h  iui_view.h  mesh_buffer.h  model_loader.h  mouse_picking.h  mouse_states.h  render_listener.h  render_type.h  render_window.h  screen_quad.h  shader.h  shape.h  ui_manager.h  utilities.h
Framework/src/: aabb.cpp  animator.cpp  app.cpp  camera_control.cpp  demo_runner.cpp  global.cpp  mesh_buffer.cpp  render_window.cpp  screen_quad.cpp  shader.cpp  ui_manager.cpp  utilities.cpp
PBD/: CMakeLists.txt  Constraints.cpp  Particle.cpp  Simulator.cpp
PBD/include/: Constraints.h  Particle.h  SimSettings.h  Simulator.h  defs.h  exporter.h
res/: website.md
res/models/skirt_riha/: cloth_mode_ridha.c4d
res/shader/: depth_debug.fs  quad.fs  quad.vs  simple.fs  simple_bone.vs
res/shader/shadow_depth/: shadow_depth.vs
res/shader/tri_vn_pc/: tri_vn_pc.fs
res/shader/tri_vn_shadow/: tri_vn_shadow.fs  tri_vn_shadow.vs
res/shader/triangle/: triangle.fs  triangle.gs  triangle.vs
res/shader/triangle2/: triangle.fs  triangle.vs
